--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
+    "@nestjs/swagger": "^7.3.0",
     "axios": "^1.6.7",
     "bignumber.js": "^9.1.2",
     "bullmq": "^5.4.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "date-fns": "^3.3.1",
     "mongoose": "^8.2.0",
     "reflect-metadata": "^0.2.1",
