--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-APP_PORT=3000
-APP_START_BLOCK=18344771
-
 DB_URI=mongodb://localhost:27017/tx-tracker
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
 ETHERSCAN_API_KEY=
+
+APP_START_BLOCK=
