--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,6 @@ REDIS_PORT=6379
 
 ETHERSCAN_API_KEY=
 
+# set this to override the sync start block
+# otherwise leave empty to start syncing from beginning
 APP_START_BLOCK=18344771
