--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@hapi/joi": "^17.1.1",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/bullmq": "^10.1.0",
+    "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.3.3",
@@ -36,11 +37,14 @@
     "axios": "^1.6.7",
     "bignumber.js": "^9.1.2",
     "bullmq": "^5.4.1",
+    "cache-manager": "^5.4.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^3.3.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.2.0",
+    "redis": "^4.6.13",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
